Fix imgs on mobile

--- a/divider.css
+++ b/divider.css
@@ -124,3 +124,18 @@
 }
 
 
+@media (max-width: 1000px) {
+  .level {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: inline;
+    flex-wrap: wrap-reverse;
+  }
+
+  .level-item {
+    justify-content: flex-start ;
+  }
+}
